--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "bootstrap": "^4.4.1",
+    "caniuse-lite": "^1.0.30001015",
     "plotly.js": "^1.51.2",
     "react": "^16.12.0",
     "react-bootstrap": "^1.0.0-beta.16",
